# Personal-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.chat  LICENSE  Makefile  README.md  __init__.py  agents.md  backend.py  build-install.sh  chat-cli.py  chat_master.py  codecov.yml  conftest.py  coverage.json  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  template.py  utils.py  versions.json
.devin/: wiki.json
.github/: dependabot.yml  git-commit-instructions.md
.github/workflows/: coverage.yml  docker-buildx.yml  docs.yml  lint.yml  stale.yml  uv-lock-refresh.yml
.streamlit/: config.toml
0.0.7/: 404.html  index.html  index.md
0.0.7/getting-started/: index.html
0.0.7/reference/: index.html
0.0.7/session-runtime/: index.html
2.0/: objects.inv
2.0/getting-started/: index.html
2.0/reference/: index.html
2.0/search/: search_index.json
2.1/: index.html  objects.inv
2.1/getting-started/: index.html
2.1/reference/: index.html
apps/meeseeks_api/: AGENTS.md  README.md  pyproject.toml
apps/meeseeks_api/src/meeseeks_api/: __init__.py  backend.py
apps/meeseeks_api/src/meeseeks_api/api/: __init__.py
apps/meeseeks_api/tests/: test_backend.py
apps/meeseeks_chat/: AGENTS.md  README.md  pyproject.toml
apps/meeseeks_chat/.streamlit/: config.toml
apps/meeseeks_chat/src/meeseeks_chat/: __init__.py  chat_master.py  entrypoint.py
apps/meeseeks_chat/tests/: test_chat_master.py
apps/meeseeks_cli/: AGENTS.md  README.md  pyproject.toml
apps/meeseeks_cli/src/meeseeks_cli/: aider_ui.py  cli_commands.py  cli_context.py  cli_dialogs.py  cli_master.py
apps/meeseeks_cli/tests/: test_aider_ui.py  test_cli.py  test_cli_commands.py  test_cli_dialogs.py
assets/css/: streamlit_custom.css
configs/: app.example.json  mcp.example.json  mcp.json  tool-manifest.example.json
core/: __init__.py  classes.py  common.py  compaction.py  components.py  hooks.py  llm.py  permissions.py  session_store.py  task_master.py  token_budget.py  tool_registry.py  types.py
core/extras/: __init__.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/components/: index.html
dev/getting-started/: index.html
dev/javascripts/: copy-page.js  mermaid-init.js  version-switcher.js
dev/reference/: index.html
dev/search/: search_index.json
dev/session-runtime/: index.html
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.chat
docs/: README.md  branch_changes.md  clients-cli.md  components.md  core-orchestration.md  getting-started.md  index.md  reference.md  session-runtime.md
docs/analysis/: architecture-comparison.md  command-log.md
docs/javascripts/: mermaid-init-v2.js  version-switcher.js
latest/: build-info.json  clients-cli.md  clients-home-assistant.md  clients-web-api.md  components.md  developer-guide.md  getting-started.md  index.html  index.md  llm-setup.md  reference.md  sitemap.xml
latest/clients-cli/: index.html
latest/clients-home-assistant/: index.html
latest/clients-web-api/: index.html
latest/components/: index.html
latest/core-orchestration/: index.html
latest/developer-guide/: index.html
latest/getting-started/: index.html
latest/llm-setup/: index.html
latest/reference/: index.html
latest/search/: search_index.json
latest/session-runtime/: index.html
main/: build-info.json  clients-cli.md  clients-home-assistant.md  clients-web-api.md  core-orchestration.md  getting-started.md  index.html  index.md  litellm-config.example.yml  objects.inv  sitemap.xml
main/clients-cli/: index.html
main/clients-home-assistant/: index.html
main/clients-web-api/: index.html
main/components/: index.html
main/core-orchestration/: index.html
main/getting-started/: index.html
main/javascripts/: build-info.js
main/llm-setup/: index.html
main/reference/: index.html
main/search/: search_index.json
main/session-runtime/: index.html
meeseeks-api/: AGENTS.md  README.md  backend.py  pyproject.toml
meeseeks-api/tests/: test_backend.py
meeseeks-chat/: AGENTS.md  README.md  chat_master.py  pyproject.toml
meeseeks-chat/static/css/: streamlit_custom.css
meeseeks-chat/tests/: test_chat_master.py
meeseeks-cli/: AGENTS.md  README.md  __init__.py  cli_commands.py  cli_context.py  cli_dialogs.py  cli_master.py  pyproject.toml
meeseeks-cli/tests/: test_cli.py  test_cli_commands.py
meeseeks_ha_conversation/: AGENTS.md  README.md  __init__.py  api.py  config_flow.py  const.py  coordinator.py  exceptions.py  helpers.py  manifest.json  pyproject.toml  strings.json
meeseeks_ha_conversation/translations/: en.json
pr-59/: build-info.json  components.md  index.html  objects.inv  sitemap.xml
pr-59/clients-cli/: index.html
pr-59/clients-home-assistant/: index.html
pr-59/clients-web-api/: index.html
pr-59/components/: index.html
pr-59/core-orchestration/: index.html
pr-59/developer-guide/: index.html
pr-59/getting-started/: index.html
pr-59/llm-setup/: index.html
pr-61/: build-info.json  clients-web-api.md  index.html  index.md  reference.md  sitemap.xml
prompts/: action-planner.txt  ha-tools-system.txt  homeassistant-get-state.txt  homeassistant-set-action.txt  response-synthesizer.txt
scripts/: update_deps.sh  vendor_aider.sh  vulture.sh
templates/: entity_info.txt.j2  template.txt.j2
tests/: AGENTS.md  conftest.py  test_action_runner.py  test_aider_edit_blocks.py  test_aider_file_tools.py  test_aider_shell_tool.py  test_common.py  test_compaction.py  test_components.py  test_config.py  test_context.py  test_core_classes.py  test_ha_conversation.py  test_llm.py  test_notification_share_store.py  test_orchestration.py  test_permissions.py  test_planning_examples.py  test_planning_intent.py  test_prompt_injection.py  test_reflection.py  test_session_runtime.py  test_session_store.py  test_token_budget.py  test_tool_registry.py  test_tools_integration.py
tools/: __init__.py  homeassistant.py  tasker.py
utils/: classes.py  common.py  homeassistant.py  talk_to_user.py  task_master.py
(+25 files in other folders)
