[project]
name = "meeseeks-workspace"
version = "1.0.0"
description = "Workspace package for the Meeseeks monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "autopep8==2.1.0",
  "flake8==7.0.0",
  "mypy==1.11.2",
  "pre-commit==3.7.1",
  "pylint==3.1.0",
  "pytest==8.2.0",
  "pytest-cov==7.0.0",
  "ruff==0.6.9",
  "types-requests==2.32.4.20260107",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "meeseeks_ha_conversation/translations",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/meeseeks_core/src/meeseeks_core/**/*.py",
  "packages/meeseeks_tools/src/meeseeks_tools/**/*.py",
  "apps/meeseeks_api/src/meeseeks_api/**/*.py",
  "apps/meeseeks_chat/src/meeseeks_chat/**/*.py",
  "apps/meeseeks_cli/src/meeseeks_cli/**/*.py",
  "meeseeks_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/meeseeks_api/tests",
  "apps/meeseeks_chat/tests",
  "apps/meeseeks_cli/tests",
]
