[project]
name = "meeseeks-workspace"
version = "2.0.0-alpha"
description = "Workspace package for the Meeseeks monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }
dependencies = [
  "meeseeks-core>=2.0.0-alpha",
]

[project.scripts]
meeseeks = "meeseeks_cli.cli_master:main"

[project.optional-dependencies]
cli = ["meeseeks-cli>=2.0.0-alpha"]
api = ["meeseeks-api>=2.0.0-alpha"]
chat = ["meeseeks-chat>=2.0.0-alpha"]
ha = ["meeseeks-ha-conversation>=2.0.0-alpha"]
tools = ["meeseeks-tools>=2.0.0-alpha"]

[dependency-groups]
dev = [
  "autopep8==2.1.0",
  "flake8==7.0.0",
  "mypy==1.11.2",
  "pre-commit==3.7.1",
  "pylint==3.1.0",
  "pytest==8.2.0",
  "pytest-cov==7.0.0",
  "ruff==0.6.9",
  "types-requests==2.32.4.20260107",
  "vulture==2.14",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
meeseeks-core = { workspace = true }
meeseeks-tools = { workspace = true }
meeseeks-cli = { path = "apps/meeseeks_cli" }
meeseeks-api = { path = "apps/meeseeks_api" }
meeseeks-chat = { path = "apps/meeseeks_chat" }
meeseeks-ha-conversation = { path = "meeseeks_ha_conversation" }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "meeseeks_ha_conversation/translations",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/meeseeks_core/src/meeseeks_core/**/*.py",
  "packages/meeseeks_tools/src/meeseeks_tools/**/*.py",
  "apps/meeseeks_api/src/meeseeks_api/**/*.py",
  "apps/meeseeks_chat/src/meeseeks_chat/**/*.py",
  "apps/meeseeks_cli/src/meeseeks_cli/**/*.py",
  "meeseeks_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/meeseeks_api/tests",
  "apps/meeseeks_chat/tests",
  "apps/meeseeks_cli/tests",
]
