[project]
name = "meeseeks-workspace"
version = "0.0.7"
description = "Workspace package for the Meeseeks monorepo."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }
dependencies = [
  "aniso8601>=10.0.1",
  "meeseeks-core>=0.0.7",
]

[project.scripts]
meeseeks = "meeseeks_cli.cli_master:main"

[project.optional-dependencies]
cli = ["meeseeks-cli>=0.0.7"]
api = ["meeseeks-api>=0.0.7"]
chat = ["meeseeks-chat>=0.0.7"]
ha = ["meeseeks-ha-conversation>=0.0.7"]
tools = ["meeseeks-tools>=0.0.7"]

[dependency-groups]
dev = [
  "autopep8==2.3.2",
  "flake8==7.3.0",
  "mypy==1.19.1",
  "pre-commit==3.8.0",
  "pylint==3.3.9",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "ruff==0.15.0",
  "types-requests==2.32.4.20260107",
  "vulture==2.14",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-shadcn>=0.9.9",
  "mkdocstrings[python]",
  "pymdown-extensions>=10.20.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
default-groups = []

[tool.uv.sources]
meeseeks-core = { workspace = true }
meeseeks-tools = { workspace = true }
meeseeks-cli = { path = "apps/meeseeks_cli", editable = true }
meeseeks-api = { path = "apps/meeseeks_api", editable = true }
meeseeks-chat = { path = "apps/meeseeks_chat", editable = true }
meeseeks-ha-conversation = { path = "meeseeks_ha_conversation", editable = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_workspace"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "meeseeks_ha_conversation/translations",
  "vendor",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
fixable = ["ALL"]
per-file-ignores = { "packages/meeseeks_tools/src/meeseeks_tools/aider_bridge/edit_blocks.py" = ["D"], "vendor/**" = ["D"] }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
  "packages/meeseeks_core/src/meeseeks_core/**/*.py",
  "packages/meeseeks_tools/src/meeseeks_tools/**/*.py",
  "apps/meeseeks_api/src/meeseeks_api/**/*.py",
  "apps/meeseeks_chat/src/meeseeks_chat/**/*.py",
  "apps/meeseeks_cli/src/meeseeks_cli/**/*.py",
  "meeseeks_ha_conversation/**/*.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "apps/meeseeks_api/tests",
  "apps/meeseeks_chat/tests",
  "apps/meeseeks_cli/tests",
]

[tool.coverage.run]
omit = [
  "packages/meeseeks_tools/src/meeseeks_tools/vendor/*",
  "vendor/*",
]
