[tool.poetry]
name = "meeseeks-chat"
version = "0.1.0"
description = "Chat Interface wrapped around the meeseeks-core. Powered by Streamlit."
authors = ["Krishnakanth Alagiri <https://github.com/bearlike>"]
license = "MIT"
readme = "README.md"
include = ["*.py"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
langchain = "^0.1.19"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
autopep8 = "^2.1.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
