[tool.poetry]
name = "meeseeks-cli"
version = "1.0.0"
description = "Terminal CLI frontend for the Meeseeks core orchestration engine."
authors = ["Krishnakanth Alagiri <https://github.com/bearlike>"]
license = "MIT"
readme = "README.md"
include = ["*.py"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.47"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
openai = "^1.28.0"
langchain = "^0.1.19"
langchain-openai = "^0.1.6"
langfuse = "^2.29.3"
jinja2 = "^3.1.4"
coloredlogs = "^15.0.1"
jq = "^1.7.0"
tiktoken = "^0.6.0"
langchain-community = "^0.0.38"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
autopep8 = "^2.1.0"
pylint = "^3.1.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[tool.mypy]
files = [
  "__init__.py",
  "cli_master.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
