[tool.poetry]
name = "meeseeks-cli"
version = "1.0.0"
description = "Terminal CLI frontend for the Meeseeks core orchestration engine."
authors = ["Krishnakanth Alagiri <https://github.com/bearlike>"]
license = "MIT"
readme = "README.md"
include = ["*.py"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.47"
rich = "^14.2.0"
python-dotenv = "^1.0.1"
langchain = "^1.2.8"
langchain-litellm = "^0.4.0"
litellm = "^1.81.0"
langfuse = { version = "^2.29.3", optional = true }
jinja2 = "^3.1.4"
jq = "^1.7.0"
tiktoken = "^0.12.0"
langchain-community = "^0.4.1"
textual = "^7.5.0"
langchain-core = "^1.2.8"
langchain-mcp-adapters = "^0.2.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
autopep8 = "^2.1.0"
pylint = "^3.1.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest-cov = "^7.0.0"

[tool.mypy]
files = [
  "__init__.py",
  "cli_master.py",
]
explicit_package_bases = true
mypy_path = ["."]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.poetry.extras]
observability = ["langfuse"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
