[project]
name = "meeseeks-api"
version = "2.0.0-alpha"
description = "REST API Engine wrapped around the Meeseeks core."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "meeseeks-core>=2.0.0-alpha",
  "meeseeks-tools[mcp]>=2.0.0-alpha",
  "flask>=3.0.3,<4.0.0",
  "flask-restx>=1.3.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.scripts]
meeseeks-api = "meeseeks_api.backend:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_api"]
