[project]
name = "meeseeks-chat"
version = "0.0.7"
description = "Chat Interface wrapped around the Meeseeks core. Powered by Streamlit."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "meeseeks-core>=0.0.7",
  "meeseeks-tools>=0.0.7",
  "streamlit>=1.34.0,<2.0.0",
]

[project.scripts]
meeseeks-chat = "meeseeks_chat.entrypoint:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_chat"]
include = ["src/meeseeks_chat/static/**"]
