[project]
name = "meeseeks-cli"
version = "0.0.6"
description = "Terminal CLI frontend for the Meeseeks core orchestration engine."
readme = "../../README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Krishnakanth Alagiri", email = "mail@kanth.tech" },
]
license = { text = "MIT" }

dependencies = [
  "meeseeks-core>=0.0.6",
  "meeseeks-tools>=0.0.6",
  "prompt-toolkit>=3.0.47,<4.0.0",
  "rich>=14.2.0,<15.0.0",
  "textual>=7.5.0,<8.0.0",
]

[project.scripts]
meeseeks = "meeseeks_cli.cli_master:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeks_cli"]
